--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,9 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - npm install
+  artifacts:
+    paths:
+      - node_modules
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
