--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,3 +48,6 @@ deploy-job:      # This job runs in the deploy stage.
   stage: run  # It only runs when *both* jobs in the test stage complete successfully.
   script:
     - npm run start
+  artifacts:
+    paths:
+      - node_modules/
