--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "ts-node server.ts",
+    "start": "ts-node src/server.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
     "prestart": "cd ../client && npm run build"
