--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "build": "tsc",
+    "test": "jest",
     "serve": "node dist/index.js",
     "prestart": "cd ../client && npm run build"
   },
@@ -14,8 +15,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.5.9",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
