--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
     "prestart": "cd ../client && npm run build"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "morgan": "~1.9.1"
   },
