--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
