--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/passport-jwt": "^3.0.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "mongodb": "^6.1.0",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
