--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-expressions": "off",
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": {
     "production": [
