--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,10 +30,6 @@
       "react-app",
       "react-app/jest"
     ],
-    "rules": {
-      "no-unused-expressions": "off",
-      "no-unused-vars": "off"
-    }
   },
   "browserslist": {
     "production": [
