--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --bail",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
