--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
-    "test": "react-scripts test --bail",
+    "test": "jest --bail",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
