--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "jest --bail --passWithNoTests && react-scripts test",
     "eject": "react-scripts eject"
   },
