--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --bail --passWithNoTests && react-scripts test",
+    "test": "jest --bail --passWithNoTests && react-scripts test --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
