--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
+    "@types/cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.3",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "~1.4.4",
     "mongodb": "^6.1.0",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
