--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,11 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
-    "@types/passport": "^1.0.12",
-    "@types/passport-jwt": "^3.0.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.3",
     "mongodb": "^6.1.0",
     "morgan": "~1.9.1",
-    "neo4j-driver": "^5.13.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "neo4j-driver": "^5.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
