--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^16.18.50",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-infinite-scroll-component": "^5.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.1",
