--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,9 @@ client-build:
     - cd client
     - npm install
     - npm run build
+  artifacts:
+    paths:
+      - client/node_modules
 
 client-test: 
   image: node:latest
@@ -25,6 +28,9 @@ client-test:
     - cd client
     - npm install
     - npm run test
+  artifacts:
+    paths:
+      - client/node_modules
 
 
 # SERVER
@@ -36,6 +42,9 @@ server-build:
     - cd server
     - npm install
     - npm run build
+  artifacts:
+    paths:
+      - server/node_modules
   
       
 server-test: 
@@ -47,3 +56,6 @@ server-test:
     - cd server
     - npm install
     - npm run test
+  artifacts:
+    paths:
+      - server/node_modules
