--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-infinite-scroll-component": "^5.0.0",
+    "@types/react-toastify": "^4.1.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
