Corrected path to keys again. Dockerfile and compose did not match.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
     # Volume for credentials:
     volumes:
-      - ~/crumbs/creds:/server/keys/:ro
+      - ~/crumbs/creds:/usr/src/crumbs/server/keys/:ro
 
     # Port mapping:
     ports:
