--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.5.9",
+    "@types/supertest": "^2.0.16",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
