--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "morgan": "~1.9.1",
     "neo4j-driver": "^5.13.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
